tests/jastadd/negative/type_errors/L4/2_ArrayDecl.ob
MODULE TestModule;
	TYPE t = ARRAY 1<2 OF INTEGER;
END TestModule.
